WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96165
WebKit Git fails to build with --with-acceleration-backend=clutter
https://bugs.webkit.org/show_bug.cgi?id=96165
Summary
WebKit Git fails to build with --with-acceleration-backend=clutter
Siraj razick
Reported
2012-09-07 17:11:48 PDT
Due to the Changes merged from
https://bugs.webkit.org/show_bug.cgi?id=90085
--with-acceleration-backend=clutter doesn't build anymore
Attachments
Build fix for webkit clutter AC backend
(9.41 KB, patch)
2012-09-12 13:15 PDT
,
Siraj razick
no flags
Details
Formatted Diff
Diff
Error Log
(2.14 KB, text/plain)
2012-09-12 13:51 PDT
,
Siraj razick
no flags
Details
Updated patch with USE(GLX)
(9.52 KB, patch)
2012-09-12 14:48 PDT
,
Siraj razick
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Siraj razick
Comment 1
2012-09-12 13:15:09 PDT
Created
attachment 163679
[details]
Build fix for webkit clutter AC backend
Martin Robinson
Comment 2
2012-09-12 13:29:42 PDT
Comment on
attachment 163679
[details]
Build fix for webkit clutter AC backend View in context:
https://bugs.webkit.org/attachment.cgi?id=163679&action=review
> Source/WebCore/GNUmakefile.list.am:5954 > +if USE_TEXTURE_MAPPER_GL > +webcoregtk_sources += \ > + Source/WebCore/platform/gtk/RedirectedXCompositeWindow.cpp \ > + Source/WebCore/platform/gtk/RedirectedXCompositeWindow.h > +endif
What's the compiler message when you try to compile these with the Clutter backend?
Siraj razick
Comment 3
2012-09-12 13:51:01 PDT
Created
attachment 163684
[details]
Error Log Error Log when RedirectedXCompositeWindow gets compiled with clutter backend
Martin Robinson
Comment 4
2012-09-12 14:15:13 PDT
(In reply to
comment #3
)
> Created an attachment (id=163684) [details] > Error Log > > Error Log when RedirectedXCompositeWindow gets compiled with clutter backend
It seems that RedirectedXCompositeWindow.cpp/h needs to be protected by USE(GLX) just like Source/WebCore/platform/graphics/glx/GLContextGLX.cpp/h. I think that's a better approach than conditional inclusion on the sources list.
Siraj razick
Comment 5
2012-09-12 14:48:26 PDT
Created
attachment 163703
[details]
Updated patch with USE(GLX) ok :), I removed the conditional inclusion from the source list and added USE(GLX) to protect the file
Martin Robinson
Comment 6
2012-09-12 14:52:09 PDT
Comment on
attachment 163703
[details]
Updated patch with USE(GLX) Thank you!
WebKit Review Bot
Comment 7
2012-09-12 15:35:46 PDT
Comment on
attachment 163703
[details]
Updated patch with USE(GLX) Clearing flags on attachment: 163703 Committed
r128372
: <
http://trac.webkit.org/changeset/128372
>
WebKit Review Bot
Comment 8
2012-09-12 15:35:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug